# si

./: Cargo.toml  Justfile  README.md
src/: colorize.rs  directory.rs  file.rs  main.rs  readme.rs  stream.rs  utils.rs
src/colorize/: mod.rs  stream.rs
src/directory/: mod.rs  stats.rs  tree.rs
src/file/: colorize.rs  line_numbers.rs  mod.rs
src/file/colorize/: mod.rs  peekable.rs  stream.rs
